--- a/index.html
+++ b/index.html
@@ -35,6 +35,34 @@
             <div id="buttons-container" class="action-buttons"></div>
         </main>
 
+        <section class="setup-card fade-in">
+            <h2 class="setup-title">MY SETUP</h2>
+            
+            <div class="setup-grid">
+                <div class="setup-item">
+                    <span class="setup-label">Девайсы</span>
+                    <p>🖱️ Мышка: <b>Attack Shark R1</b></p>
+                    <p>⌨️ Клавиатура: <b>Aula F75</b></p>
+                    <p>🎧 Наушники: <b>Logitech G435</b></p>
+                    <p>🪑 Кресло: <b>Vecotti GT Blue</b></p>
+                </div>
+
+                <div class="setup-item">
+                    <span class="setup-label">Монитор</span>
+                    <p>🖥️ <b>Philips Evnia 27M2N5500</b></p>
+                </div>
+
+                <div class="setup-item">
+                    <span class="setup-label">Компьютер</span>
+                    <p>💿 Процессор: <b>AMD Ryzen 7 5700X</b></p>
+                    <p>🔋 Видеокарта: <b>NVIDIA RTX 4070 (12GB)</b></p>
+                    <p>🧠 ОЗУ: <b>32GB RAM</b></p>
+                    <p>🔌 Мать: <b>ASUS TUF B550M-PLUS</b></p>
+                    <p>📦 Корпус: <b>be quiet! Pure Base 501</b></p>
+                </div>
+            </div>
+        </section>
+
         <div class="player-wrapper fade-in">
             <div class="player-glass">
                 <div class="track-info">
@@ -68,5 +96,4 @@
     <audio id="audio-player" loop></audio>
     <script src="script.js"></script>
 </body>
-
 </html>
