--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="setup-item">
                     <span class="setup-label">Компьютер</span>
                     <p>💿 Процессор: <b>AMD Ryzen 7 5700X</b></p>
-                    <p>🔋 Видеокарта: <b>NVIDIA RTX 4070 (12GB)</b></p>
+                    <p>🔋 Видеокарта: <b>NVIDIA RTX 4070</b></p>
                     <p>🧠 ОЗУ: <b>32GB RAM</b></p>
                     <p>🔌 Мать: <b>ASUS TUF B550M-PLUS</b></p>
                     <p>📦 Корпус: <b>be quiet! Pure Base 501</b></p>
@@ -97,3 +97,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
