--- a/index.html
+++ b/index.html
@@ -6,77 +6,11 @@
   <title>Skorpy Bio</title>
 
   <link rel="icon" type="image/png" href="favicon.png" />
-
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="style.css" />
-
-  <style>
-    /* Плавное исчезновение стартового экрана */
-    #start-screen {
-      transition: opacity 0.8s ease;
-    }
-
-    /* Иконки под ником */
-    .social-row {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-    .social-icon svg {
-      width: 24px;
-      height: 24px;
-      fill: #a855f7;
-      transition: 0.3s;
-    }
-    .social-icon:hover svg {
-      fill: #fff;
-    }
-
-    /* Мобильная адаптация */
-    @media (max-width: 600px) {
-      .card, .setup-card {
-        width: 90% !important;
-        margin: 10px auto !important;
-        padding: 15px !important;
-      }
-
-      .setup-grid {
-        display: block !important;
-      }
-
-      /* Фон фиксируем для мобил */
-      body {
-        background-attachment: fixed !important;
-        overflow-y: auto !important;
-      }
-
-      #main-content {
-        justify-content: flex-start !important;
-        padding-top: 20px !important;
-      }
-
-      /* Уменьшаем ник и кнопки */
-      #nickname {
-        font-size: 44px !important;
-      }
-      .big-btn {
-        font-size: 18px !important;
-        padding: 12px 14px !important;
-      }
-
-      .player-wrapper {
-        width: 95% !important;
-        position: fixed !important;
-        bottom: 10px !important;
-        left: 50% !important;
-        transform: translateX(-50%) !important;
-      }
-    }
-  </style>
 </head>
 
 <body>
@@ -98,42 +32,23 @@
 
         <h1 id="nickname" class="glitch-text">Skorpy</h1>
 
-        <!-- Иконки под ником -->
-        <div class="social-row">
-          <a href="https://t.me/logovo_skorpy" target="_blank" class="social-icon" aria-label="Telegram">
-            <svg viewBox="0 0 24 24">
-              <path d="M21.93 3.68c-.27-.95-1.18-1.39-2.22-1.05L2.56 9.17c-1.06.41-1.06 2.03.04 2.41l4.47 1.55 1.55 4.96c.16.52.83.65 1.21.29l2.25-2.15 4.67 3.44c.86.63 2.12.2 2.33-.86l3.87-14.2c.11-.42-.04-.85-.35-1.13zM10.87 13.5l-.64 2.9-1.07-3.41 9.87-6.86-8.16 7.37z"/>
-            </svg>
-          </a>
-
-          <a href="https://www.tiktok.com/@skorpy0n" target="_blank" class="social-icon" aria-label="TikTok">
-            <svg viewBox="0 0 24 24">
-              <path d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"/>
-            </svg>
-          </a>
-
-          <a href="https://www.youtube.com/@SkorpyYouTube" target="_blank" class="social-icon" aria-label="YouTube">
-            <svg viewBox="0 0 24 24">
-              <path d="M21.58 5.49a2.7 2.7 0 0 0-1.9-1.9C18 3.2 12 3.2 12 3.2s-6 0-7.68.4a2.7 2.7 0 0 0-1.9 1.9C2 7.17 2 10.67 2 10.67s0 3.5.42 5.18a2.7 2.7 0 0 0 1.9 1.9c1.68.39 7.68.39 7.68.39s6 0 7.68-.39a2.7 2.7 0 0 0 1.9-1.9C22 14.17 22 10.67 22 10.67s0-3.5-.42-5.18zM9.6 14.07v-6.8l6.4 3.4-6.4 3.4z"/>
-            </svg>
-          </a>
-        </div>
+        <!-- соц-иконки сюда (JS будет заполнять) -->
+        <div class="social-row" id="social-row"></div>
       </div>
 
       <div class="action-buttons">
-        <a href="https://discord.gg/Uzyc9wmN5m" target="_blank" class="big-btn">
+        <a href="https://discord.gg/Uzyc9wmN5m" target="_blank" class="big-btn" rel="noopener">
           <span>Раздачи ресов и общение</span>
           <span class="arrow">→</span>
         </a>
 
-        <a href="https://t.me/skorpy0n" target="_blank" class="big-btn">
+        <a href="https://t.me/skorpy0n" target="_blank" class="big-btn" rel="noopener">
           <span>Связь со мной</span>
           <span class="arrow">→</span>
         </a>
       </div>
     </main>
 
-    <!-- MY SETUP: строго 3 секции -->
     <section class="setup-card fade-in">
       <h2 class="setup-title">MY SETUP</h2>
 
@@ -173,22 +88,22 @@
         </div>
 
         <div class="controls-row">
-          <button id="play-btn" class="play-btn" type="button">
-            <svg id="icon-play" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z" /></svg>
-            <svg id="icon-pause" viewBox="0 0 24 24" fill="currentColor" style="display:none;"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z" /></svg>
+          <button id="play-btn" class="play-btn" type="button" aria-label="Play/Pause">
+            <svg id="icon-play" viewBox="0 0 24 24" fill="currentColor"><path d="M8 5v14l11-7z"/></svg>
+            <svg id="icon-pause" viewBox="0 0 24 24" fill="currentColor" style="display:none;"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
           </button>
 
           <span id="current-time">00:00</span>
 
           <div class="progress-container">
-            <input type="range" id="progress-bar" value="0" min="0" step="1" />
+            <input type="range" id="progress-bar" value="0" min="0" max="100" step="1" />
           </div>
 
           <span id="duration">00:00</span>
 
           <div class="volume-container">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M11 5L6 9H2v6h4l5 4V5z" />
+              <path d="M11 5L6 9H2v6h4l5 4V5z"></path>
             </svg>
             <input type="range" id="volume-slider" min="0" max="1" step="0.01" value="0.5" />
           </div>
@@ -199,27 +114,6 @@
 
   <audio id="audio-player" loop></audio>
 
-  <script>
-    function enterSite() {
-      const start = document.getElementById('start-screen');
-      const main = document.getElementById('main-content');
-
-      // Плавно гасим стартовый экран
-      start.style.opacity = '0';
-      start.style.pointerEvents = 'none';
-
-      setTimeout(() => {
-        start.style.display = 'none';
-
-        // Убираем hidden и принудительно показываем контент
-        main.classList.remove('hidden');
-        main.style.display = 'flex';
-        main.style.opacity = '1';
-
-        // Автозапуск музыки (если браузер разрешит)
-        try { document.getElementById('play-btn').click(); } catch (e) {}
-      }, 800);
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
